force-app/main/default/objects/Assessment__c/fields/Any_injuries_to_the_child__c.field-meta.xml
<CustomField>
    <fullName>Any_injuries_to_the_child__c</fullName>
    <description>Any injuries to the child in this placement/living arrangement have been appropriately explained and documented and suggest no immediate danger to the child</description>
    <label>Any injuries to the child</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>