force-app/main/default/objects/Assessment__c/fields/Case_Worker_Signature__c.field-meta.xml
<CustomField>
    <fullName>Case_Worker_Signature__c</fullName>
    <label>Case Worker Signature</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>