force-app/main/default/objects/Assessment__c/fields/Caseworker_Signature_Date__c.field-meta.xml
<CustomField>
    <fullName>Caseworker_Signature_Date__c</fullName>
    <label>Caseworker Signature Date</label>
    <type>Date</type>
</CustomField>