force-app/main/default/objects/Assessment__c/fields/If_the_child_had_a_history_of_drug__c.field-meta.xml
<CustomField>
    <fullName>If_the_child_had_a_history_of_drug__c</fullName>
    <description>If the child had a history of drug or alcohol abuse, their needs are being or will be addressed danger to self or others</description>
    <label>If the child had a history of drug</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>