force-app/main/default/objects/Assessment__c/fields/If_the_child_was_on_medication__c.field-meta.xml
<CustomField>
    <fullName>If_the_child_was_on_medication__c</fullName>
    <description>If the child was on medication, the medication is or will be secured and managed in a manner that prevents immediate danger to self or others</description>
    <label>If the child was on medication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>