force-app/main/default/objects/Assessment__c/fields/OHP_if_they_remain_with_the_current__c.field-meta.xml
<CustomField>
    <fullName>OHP_if_they_remain_with_the_current__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if they remain with the current placement / Living arrangement</description>
    <label>if they remain with the current</label>
    <type>Checkbox</type>
</CustomField>