force-app/main/default/objects/Assessment__c/fields/OHP_Safe_Or_Unsafe__c.field-meta.xml
<CustomField>
    <fullName>OHP_Safe_Or_Unsafe__c</fullName>
    <label>OHP_Safe_Or_Unsafe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Child is Safe (Influences 1-12 Marked &apos;YES&apos;)</fullName>
            </value>
            <value>
                <fullName>Child is Unsafe (Any Influence 1-12 Was checked &apos;NO&apos;)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>