force-app/main/default/objects/Assessment__c/fields/SAFEC_Any_Influences_1_18_was_checked__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_Any_Influences_1_18_was_checked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Any Influences 1-18 was checked Yes and there is no Safety Plan</description>
    <label>Any Influences 1-18 was checked Yes</label>
    <type>Checkbox</type>
</CustomField>