force-app/main/default/objects/Assessment__c/fields/SAFEC_Caregiver_describes_the_child__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_Caregiver_describes_the_child__c</fullName>
    <description>Caregiver describes the child in predominately negative terms or acts towards the child in negative way that result in the child being a danger to self or others, acting out aggressively, or being severely withdrawn and/or suicidal.</description>
    <label>Caregiver describes the child</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>