force-app/main/default/objects/Assessment__c/fields/SAFEC_Caregiver_did_not_agree_to_safety__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_Caregiver_did_not_agree_to_safety__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Caregiver did not agree to a safety Plan</description>
    <label>Caregiver did not agree to a safety Plan</label>
    <type>Checkbox</type>
</CustomField>