force-app/main/default/objects/Assessment__c/fields/SAFEC_Caregiver_does_not_meet_the_childs__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_Caregiver_does_not_meet_the_childs__c</fullName>
    <description>Caregiver does not meet the child&apos;s current/imminent environment need for food or clothing or adequate shelter and there are no substitue  caregiver who are capable of obtaining resource to meet the needs.</description>
    <label>Caregiver does not meet the child&apos;s</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>