force-app/main/default/objects/Assessment__c/fields/SAFEC_Caregiver_does_not_or_refuse__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_Caregiver_does_not_or_refuse__c</fullName>
    <description>Caregiver does not or refuse to provide supervision to protect the child, based on the child&apos;s age and there is no substitute caregiver to adequately plan for the child&apos;s supervision. and this places the child in immediate danger.</description>
    <label>Caregiver does not or refuse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>