force-app/main/default/objects/Assessment__c/fields/SAFEC_Caregiver_exhibits_self_control__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_Caregiver_exhibits_self_control__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Caregiver exhibits self control and puts the child&apos;s safety ahead of his/her own needs and for wants.</description>
    <label>Caregiver exhibits self control</label>
    <type>Checkbox</type>
</CustomField>