force-app/main/default/objects/Assessment__c/fields/SAFEC_Caregiver_has_supportive__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_Caregiver_has_supportive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Caregiver has supportive relationships with one or more persons who may be willing to participate in safety planning AND caregiver is willing and able to accept their assistance.</description>
    <label>Caregiver has supportive relationships</label>
    <type>Checkbox</type>
</CustomField>