force-app/main/default/objects/Assessment__c/fields/SAFEC_Caregiver_is_able_and_willing__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_Caregiver_is_able_and_willing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Caregiver is able and willing to use resources that are necessary to protect child.</description>
    <label>Caregiver is able and willing</label>
    <type>Checkbox</type>
</CustomField>