force-app/main/default/objects/Assessment__c/fields/SAFEC_Caregiver_s_emotional_instability__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_Caregiver_s_emotional_instability__c</fullName>
    <description>Caregiver&apos;s emotional instability, developmental status, lack of knowledge, Skills or motivation to parent, cognitive deficiency or behaviors resulting from mental or physical illness or disability, seriously impairs  his/her current ability to supervise,</description>
    <label>Caregiver&apos;s emotional instability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>