force-app/main/default/objects/Assessment__c/fields/SAFEC_Danger_cannot_be_addressed_via__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_Danger_cannot_be_addressed_via__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Danger cannot be addressed via Safety Plan</description>
    <label>Danger cannot be addressed via Safety</label>
    <type>Checkbox</type>
</CustomField>