force-app/main/default/objects/Assessment__c/fields/SAFEC_Diminished_mental_capacity__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_Diminished_mental_capacity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Diminished mental capacity(e.g.,developmental delay, non-verbal)</description>
    <label>Diminished mental capacity</label>
    <type>Checkbox</type>
</CustomField>