force-app/main/default/objects/Assessment__c/fields/SAFEC_Diminished_Physical_capacity__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_Diminished_Physical_capacity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Diminished Physical capacity(e.g.,non-ambulatory, limited use of limbs)</description>
    <label>Diminished Physical capacity(e.g.,non-am</label>
    <type>Checkbox</type>
</CustomField>