force-app/main/default/objects/Assessment__c/fields/SAFEC_Out_HOME_Before_completing_a_case__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_Out_HOME_Before_completing_a_case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Before completing a case reconsideration</description>
    <label>Before completing a case reconsideration</label>
    <type>Checkbox</type>
</CustomField>