force-app/main/default/objects/Assessment__c/fields/SAFEC_OUT_HOME_When_the_case_assessor__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_OUT_HOME_When_the_case_assessor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When the case assessor discovers there is a significant change in the composition of the individuals in the homeWhen the case assessor discovers there is a significant change in the composition of the individuals in the home</description>
    <label>When the case assessor discovers there</label>
    <type>Checkbox</type>
</CustomField>