force-app/main/default/objects/Assessment__c/fields/SAFEC_School_age_but_not_attending__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_School_age_but_not_attending__c</fullName>
    <defaultValue>false</defaultValue>
    <description>School age, but not attending school</description>
    <label>School age, but not attending school</label>
    <type>Checkbox</type>
</CustomField>