force-app/main/default/objects/Assessment__c/fields/SAFEC_The_child_is_extremely_anxious__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_The_child_is_extremely_anxious__c</fullName>
    <description>The child is extremely anxious or hearful about the current home environment.</description>
    <label>The child is extremely anxious</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>