force-app/main/default/objects/Assessment__c/fields/SAFEC_The_child_is_unable_to_protect__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_The_child_is_unable_to_protect__c</fullName>
    <description>The child is unable to protect self and conditions in the home indicate immediate danger.</description>
    <label>The child is unable to protect</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>