force-app/main/default/objects/Assessment__c/fields/SAFEC_The_childs_whereabouts_are_unknown__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_The_childs_whereabouts_are_unknown__c</fullName>
    <description>The child&apos;s whereabouts are unknown, the family refuses access to the child or there is reason to belive that the family is about to flee</description>
    <label>The child&apos;s whereabouts are unknown</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>