force-app/main/default/objects/Assessment__c/fields/SAFEC_When_circumstances_suggest_that__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_When_circumstances_suggest_that__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When circumstances suggest that the child&apos;s safety may be jeopardized</description>
    <label>When circumstances suggest that</label>
    <type>Checkbox</type>
</CustomField>