force-app/main/default/objects/Assessment__c/fields/SAFEC_When_the_safety_plan__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_When_the_safety_plan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When the safety plan is re-evaluated.Date of last Safety Plan</description>
    <label>When the safety plan</label>
    <type>Checkbox</type>
</CustomField>