force-app/main/default/objects/Assessment__c/fields/Safety_Plan_Decision__c.field-meta.xml
<CustomField>
    <fullName>Safety_Plan_Decision__c</fullName>
    <label>Safety Plan Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Any infuences 1-18 was checked yes and there is no safety plan</fullName>
            </value>
            <value>
                <fullName>Child currently has an out of home program assignment and it is not safe for the child to return to this caregiver</fullName>
            </value>
            <value>
                <fullName>Caregiver did not agree to a safety plan</fullName>
            </value>
            <value>
                <fullName>Danger cannot be addressed via safety plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>