force-app/main/default/objects/Assessment__c/fields/The_child_s_Immediate_health_needs__c.field-meta.xml
<CustomField>
    <fullName>The_child_s_Immediate_health_needs__c</fullName>
    <description>The child&apos;s Immediate health needs are being or will be met in a manner that will prevent immediate danger to self or others</description>
    <label>The child&apos;s Immediate health needs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>