force-app/main/default/objects/Assessment__c/fields/This_child_does_not_express_specific__c.field-meta.xml
<CustomField>
    <fullName>This_child_does_not_express_specific__c</fullName>
    <description>This child does not express specific fears of other children, providers, or the environment that suggest that the child is in immediate danger</description>
    <label>This child does not express specific</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>